--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@uploadthing/react": "^6.6.0",
     "apexcharts": "^3.49.1",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
@@ -17,16 +20,21 @@
     "lucide": "^0.395.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.12.0"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1"
   }
 }
