--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.16.1",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@uploadthing/react": "^6.6.0",
@@ -21,6 +21,7 @@
     "lucide": "^0.395.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
@@ -35,7 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "prisma": "^5.15.1",
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.4.1"
   }
 }
