--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tremor/react": "^3.17.4",
     "@uploadthing/react": "^6.6.0",
     "apexcharts": "^3.49.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
