--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tremor/react": "^3.17.4",
     "@uploadthing/react": "^6.6.0",
+    "@vercel/analytics": "^1.3.1",
     "apexcharts": "^3.49.1",
     "base64url": "^3.0.1",
     "bcryptjs": "^2.4.3",
