--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flowbite": "^2.4.1",
     "lucide": "^0.395.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
